--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,22 @@
+style {
+  background: var(--Neutral-Color-neutral-99, #efefee);
+  background: var(--Primary-Color-primary-50, #463df5);
+}
 body {
   width: 1440px;
   height: 7872px;
+}
+.navstyle {
+  display: flex;
+  width: 100%;
+  height: 101px;
+  border-radius: 0px 0px 50px 50px;
+  background-color: var(--Neutral-Color-neutral-99);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
 }
 .topnav {
   color: #463df5;
@@ -15,16 +31,4 @@ body {
   align-items: center;
   margin: 0px;
   gap: 500px;
-}
-.navstyle {
-  display: flex;
-  width: 1440px;
-  height: 101px;
-  border-radius: 0px 0px 50px 50px;
-  background-color: #efefee;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
 }
